--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>正法寶藏工作室-經文比對</title>
   </head>
-  <body id="bg">
+  <body>
     <div id="root"></div>
     <script src="http://localhost:8080/bundle.js"></script>
   </body>
